--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Environment variable examples
-FLASK_ENV=dev
+# Copy to .env and change values
+DB_URL=postgresql+psycopg2://username:password@localhost:5432/hri_survey
 BASIC_AUTH_USER=studyowner
 BASIC_AUTH_PASS=change-me
