--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-# Copy to .env and change values
-DB_URL=postgresql+psycopg2://username:password@localhost:5432/hri_survey
-BASIC_AUTH_USER=studyowner
-BASIC_AUTH_PASS=password
+# Copy to .env and change placeholder values 
+DATABASE_URL=postgresql+psycopg2://username:password@localhost:5432/hri_survey
+
+BASIC_AUTH_USERNAME=studyowner
+BASIC_AUTH_PASSWORD=password
